--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 5000
 MONGO_URL = mongodb+srv://mailtosauravs:mailtosauravs%402003@cluster0.qmz7zj4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET = saurav
