--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "create-react-app": "^5.0.1",
+    "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
+    "create-react-app": "^1.2.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.4.4",
+    "mongoose": "^8.4.5",
     "nodemon": "^3.1.4"
   }
 }
